--- a/client/css/app.css
+++ b/client/css/app.css
@@ -22,8 +22,8 @@ body, html {
 
 #publisher {
     position: absolute;
-    width: 360px;
-    height: 240px;
+    width: 35%;
+    height: 20%;
     bottom: 10px;
     left: 10px;
     z-index: 100;
