--- a/client/css/app.css
+++ b/client/css/app.css
@@ -22,8 +22,8 @@ body, html {
 
 #publisher {
     position: absolute;
-    width: 35%;
-    height: 20%;
+    width: 150px;
+    height: 90px;
     bottom: 10px;
     left: 10px;
     z-index: 100;
